Изменение в проекте. 1. Добавил иконки в меню 2. Добавил в String - текст.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="cartoon"> Мультфильмы </string>
     <string name="text"> КРОКОДИЛ </string>
     <string name="menu"> MENU </string>
+    <string name="number"> two </string>
 
 </resources>
