Изменение в проекте. 1. Добавил главное меню 2. Кнопка с общими правилами игры 3. Заменил рисунок кнопки "player" - при нажатии меняеться рисунок. 4. Добавил в массив, новых слов.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,9 @@
     <string name="Средний"> Средний </string>
     <string name="Тяжелый"> Сложный </string>
     <string name="Сложность"> Сложность </string>
+    <string name="Закрыть"> Закрыть </string>
+    <string name="exit"> Выход </string>
+    <string name="instructions"> Инструкция </string>
+    <string name="PlayGame"> Начать игру </string>
 
 </resources>
